[Feature]Add metrics documentation and grafana dashboard. (#117)